<resources>
    <string name="app_name">Calculator</string>
    <string name="button_ac">AC</string>
    <string name="positive_negative">+/-</string>
    <string name="button_percentage">%</string>
    <string name="button_division">÷</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiplication">X</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_sustraction">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_addition">+</string>
    <string name="button_0">0</string>
    <string name="button_decimal">.</string>
    <string name="button_equalTo">=</string>
    <string name="hint_number">0</string>
</resources>